--- a/HRK_Computer_Problem_2.ipynb
+++ b/HRK_Computer_Problem_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlIZ+cGmElY6db5ygx+c07",
+      "authorship_tag": "ABX9TyOA5TYglzRDF+3cvKs8Jap0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We are going to use the backtracking method to find the first root of $v_x$. Then we will find displacement by computing $[\\int_{0}^{root} v_x \\,dt ]$. \n",
+        "We are going to use the bisecting method to find the first root of $v_x$. Then we will find displacement by computing $[\\int_{0}^{root} v_x \\,dt ]$. \n",
         "\n",
         "First we must establish bounds, $[a,b]$ where there is only one root to use the Intermediate Value Theorem. Let's the graph the function to establish such bounds."
       ],
@@ -104,7 +104,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We can see the derivative is somewhere around 1 by graphing, so we can establish bounds $[a,b]$ such that $a=0.8$ and $b=1.2$. Now we can find the exact value using backtracking. Backtracking uses IVT multiple times until it narrows down where the root is. The degree of precision is controlled by tolerance. "
+        "We can see the derivative is somewhere around 1 by graphing, so we can establish bounds $[a,b]$ such that $a=0.8$ and $b=1.2$. Now we can find the exact value using bisecting. Bisecting uses IVT multiple times until it narrows down where the root is. The degree of precision is controlled by tolerance. "
       ],
       "metadata": {
         "id": "6n91rnli1SDP"
